--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Static/CSS/style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="header">
+            <h1>HIT THE BUTTON</h1>
+        </div>
+
+        <div class="main-container">
+            <a class="nes-btn" href="#">Normal</a>
+
+            <button type="button" class="nes-btn is-primary">Primary</button>
+            <button type="button" class="nes-btn is-success">Success</button>
+            <button type="button" class="nes-btn is-warning">Warning</button>
+            <button type="button" class="nes-btn is-error">Error</button>
+            <button type="button" class="nes-btn is-disabled">Disabled</button>
+
+            <label class="nes-btn">
+            <span>Select your file</span>
+            <input type="file">
+            </label>
+        </div>
+
+        <div class="footer"></div>
+    </div>
+
     
 </body>
 </html>
