creazione delle "carte"

--- a/index.html
+++ b/index.html
@@ -8,28 +8,23 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>HIT THE BUTTON</h1>
-        </div>
-
-        <div class="main-container">
-            <a class="nes-btn" href="#">Normal</a>
-
-            <button type="button" class="nes-btn is-primary">Primary</button>
-            <button type="button" class="nes-btn is-success">Success</button>
-            <button type="button" class="nes-btn is-warning">Warning</button>
-            <button type="button" class="nes-btn is-error">Error</button>
-            <button type="button" class="nes-btn is-disabled">Disabled</button>
-
-            <label class="nes-btn">
-            <span>Select your file</span>
-            <input type="file">
-            </label>
-        </div>
-
-        <div class="footer"></div>
+    <div class="header">
+        <h1>HIT THE BUTTON - OFFICIAL GAME</h1>
     </div>
+    <br>
+    <br>
+    <div class="cards">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </div>
+
+    <div class="footer"></div>
 
     
 </body>
